syntax = "proto3";

option go_package = "github.com/kiran-blockchain/netxd-go-advanced/grpc-demo/hellowrold";

package hellowrold;

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    string name = 1;
    int32 age = 2;
}

message HelloResponse {
    string message = 1;
}