syntax = "proto3";

option go_package = "github.com/kiran-blockchain/netxd-go-advanced/grpc-demo/hellowrold";

package task;
 

service Taskservice {
    rpc AddTask (Task) returns (TaskResponse);
    rpc GetTask (Empty) returns (TaskList);
}

message Task {
    string taskId = 1;
    string title = 2;
    bool completed = 3;
}

message TaskResponse {
    string id = 1;
}

message TaskList {
    repeated Task tasks = 1;
}

message Empty {}